--- a/css/style.css
+++ b/css/style.css
@@ -391,7 +391,7 @@
 			width: 100%;
 		}
 
-			table.default tbody tr {
+		table.default tbody tr {
 				border-bottom: solid 1px #888888;
 			}
 
@@ -627,3 +627,8 @@
 		text-align: center;
 		border-radius: 0px 0px 6px 6px;
 	}
+
+	/* Tables */
+		.table, th, td {
+			border: 10px solid black;
+		}
